--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -24,6 +24,7 @@
                 <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
             </form>
         </div>
+        {% if orders %}
         <div class="col-12 col-lg-6">
             <p class="text-muted">Order History</p>
             <div class="order-history table-responsive">
@@ -61,6 +62,7 @@
                 </table>
             </div>
         </div>
+        {% endif %}
     </div>
     {% endblock %}
 
