--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -67,16 +67,16 @@
                     </p>
                 </div>
                 <div class="col-12 col-md-8 text-md-right">
-                    <p class="small mb-0">{{ item.quantity }} @ ${{ item.product.price }} each</p>
+                    <p class="small mb-0">{{ item.quantity }} @ £{{ item.product.price }} each</p>
                 </div>
             </div>
             {% endfor %}
 
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col">
                     <small class="text-muted">Delivering To:</small>
                 </div>
-            </div>
+            </div> -->
 
             <div class="row">
                 <div class="col-12 col-md-4">
@@ -167,7 +167,7 @@
                     <p class="mb-0 text-black font-weight-bold">Order Total</p>
                 </div>
                 <div class="col-12 col-md-8 text-md-right">
-                    <p class="mb-0">{{ order.order_total }}</p>
+                    <p class="mb-0">£{{ order.total }}</p>
                 </div>
             </div>
 
