--- a/faq/templates/faq/view_faq.html
+++ b/faq/templates/faq/view_faq.html
@@ -3,4 +3,74 @@
 
 {% block content %}
 <h1 class="display-4 text-success">FAQ!!!</h1>
-{% endblock %}
+
+
+<!-- <div class="container-fluid">
+    {% for question in question_list %}
+    <p>{{ question.title }}</p>
+    <p>{{ question.body }}</p>
+    <a href="/setlist/add/{{ gig.id }}" class="btn btn-outline-dark mb-2 main-btn">
+        <i class="fa-solid fa-file-circle-plus pe-1"></i>Add Setlist</a> -->
+
+<!-- Add button to add answer -->
+<!-- Like products detail. Show Q'ion, add form to submit answer -->
+<!-- If superuser default = 1, if user default = 0 -->
+<!-- <p>{{ question.id }}</p>
+    {% endfor %} -->
+<!-- </div>
+<h1 class="display-4 text-success">FAQ!!!</h1> -->
+
+<div class="accordion" id="accordionExample">
+    {% for question in question_list %}
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                aria-expanded="true" aria-controls="collapseOne">
+                hfgdsghfdsgfdsgfdsgd gfdsgfdgfsd
+            </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                ANSWER
+            </div>
+        </div>
+        {% endfor %}
+        <!-- <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Accordion Item #2
+            </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse
+                plugin adds the appropriate classes that we use to style each element. These classes control the overall
+                appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with
+                custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go
+                within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Accordion Item #3
+            </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+            data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse
+                plugin adds the appropriate classes that we use to style each element. These classes control the overall
+                appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with
+                custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go
+                within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+        </div>
+    </div> -->
+    </div>
+    {% endblock %}
