--- a/faq/templates/faq/view_faq.html
+++ b/faq/templates/faq/view_faq.html
@@ -22,7 +22,8 @@
 
 <div class="accordion" id="accordionExample">
     {% for question in question_list %}
-    <div class="accordion-item">
+    <p>{{ question.body }}</p>
+    <!-- <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                 aria-expanded="true" aria-controls="collapseOne">
@@ -34,9 +35,9 @@
             <div class="accordion-body">
                 ANSWER
             </div>
-        </div>
-        {% endfor %}
-        <!-- <div class="accordion-item">
+        </div> -->
+    {% endfor %}
+    <!-- <div class="accordion-item">
         <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -72,5 +73,5 @@
             </div>
         </div>
     </div> -->
-    </div>
-    {% endblock %}
+</div>
+{% endblock %}
