--- a/faq/templates/faq/view_faq.html
+++ b/faq/templates/faq/view_faq.html
@@ -20,10 +20,10 @@
 <!-- </div>
 <h1 class="display-4 text-success">FAQ!!!</h1> -->
 
-<div class="accordion" id="accordionExample">
+<!-- <div class="accordion" id="accordionExample">
     {% for question in question_list %}
-    <p>{{ question.body }}</p>
-    <!-- <div class="accordion-item">
+    <p>{{ question.body }}</p> -->
+<!-- <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                 aria-expanded="true" aria-controls="collapseOne">
@@ -36,8 +36,8 @@
                 ANSWER
             </div>
         </div> -->
-    {% endfor %}
-    <!-- <div class="accordion-item">
+<!-- {% endfor %} -->
+<!-- <div class="accordion-item">
         <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -73,5 +73,10 @@
             </div>
         </div>
     </div> -->
-</div>
+<!-- </div> -->
+<form action="" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit">
+</form>
 {% endblock %}
