--- a/faq/templates/faq/view_faq.html
+++ b/faq/templates/faq/view_faq.html
@@ -4,6 +4,12 @@
 {% block content %}
 <h1 class="display-4 text-success">FAQ!!!</h1>
 
+<form action="" method="post">
+    {% csrf_token %}
+    {{ form | crispy }}
+    <input type="submit">
+</form>
+
 
 <!-- <div class="container-fluid">
     {% for question in question_list %}
@@ -20,7 +26,7 @@
 <!-- </div>
 <h1 class="display-4 text-success">FAQ!!!</h1> -->
 
-<div class="accordion" id="accordionExample">
+<!-- <div class="accordion" id="accordionExample">
     {% for question in question_list %}
     <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
@@ -35,8 +41,8 @@
                 ANSWER
             </div>
         </div>
-        {% endfor %}
-        <!-- <div class="accordion-item">
+        {% endfor %} -->
+<!-- <div class="accordion-item">
         <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -72,5 +78,5 @@
             </div>
         </div>
     </div> -->
-    </div>
-    {% endblock %}
+<!-- </div> -->
+{% endblock %}
