--- a/faq/templates/faq/view_faq.html
+++ b/faq/templates/faq/view_faq.html
@@ -8,7 +8,7 @@
 {% endfor %}
 <form action="" method="post">
     {% csrf_token %}
-    {{ form | crispy }}
+    {{ question_form | crispy }}
     <input type="submit">
 </form>
 
