--- a/faq/templates/faq/view_faq.html
+++ b/faq/templates/faq/view_faq.html
@@ -4,13 +4,16 @@
 {% block content %}
 <h1 class="display-4 text-success">FAQ!!!</h1>
 {% for question in questions %}
-{{ question.body }}
+<p>{{ question.body }}</p>
 {% endfor %}
-<form action="" method="post">
+
+
+
+<!-- <form action="" method="post">
     {% csrf_token %}
     {{ question_form | crispy }}
-    <input type="submit">
-</form>
+    <input type="submit" value="Submit Question">
+</form> -->
 
 
 <!-- <div class="container-fluid">
