--- a/faq/templates/faq/view_faq.html
+++ b/faq/templates/faq/view_faq.html
@@ -21,7 +21,7 @@
                 <p>{{ answer.body | safe }}</p>
                 {% endfor %}
                 {% else %}
-                <form action="" method="post">
+                <form action="answer/{{ question.id }}" method="post">
                     {% csrf_token %}
                     {{ answer_form | crispy }}
                     <input type="submit" value="Submit Answer">
