--- a/faq/templates/faq/view_faq.html
+++ b/faq/templates/faq/view_faq.html
@@ -32,4 +32,10 @@
         {% endfor %}
     </div>
 </div>
+
+<form action="question/" method="post">
+    {% csrf_token %}
+    {{ question_form | crispy }}
+    <input type="submit" value="Submit Question">
+</form>
 {% endblock %}
