--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'products' %}">Menu</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'view_faq' %}"> F.A.Q.</a>
+                        </li>
                         {% if request.user.is_authenticated %}
                         {% if request.user.is_superuser %}
                         <li class="nav-item dropdown">
