--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,9 @@
                             <a class="nav-link" href="{% url 'products' %}">Menu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'view_faq' %}"> F.A.Q.</a>
+                            <!-- ADD ABREVIATION -->
+                            <a class="nav-link" href="{% url 'view_faq' %}"><abbr
+                                    title="Frequently Asked Questions">FAQs</abbr></a>
                         </li>
                         {% if request.user.is_authenticated %}
                         {% if request.user.is_superuser %}
