--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -15,17 +15,18 @@
                     <h5 class="card-title">{{ product.name }}</h5>
                     <p class="card-text">{{ product.short_description }}</p>
                 </div>
+                <div class=" card-body">
+                    <p class="card-text">{{ product.description }}</p>
+                </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
                         Category: {{ product.category }}
                     </li>
                     <li class="list-group-item">£{{ product.price }}</li>
                 </ul>
-                <div class="card-body">
-                    <!-- <a href="#link" class="btn btn-info" role="button">Link Button</a> -->
-                    <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-info" role="button">See More Info</a>
-                </div>
-                <form class="form container" action="{% url 'add_to_cart' product.id %}" 
+                
+
+                <!-- <form class="form container" action="{% url 'add_to_cart' product.id %}" 
                     method="POST">
                     {% csrf_token %}
                     <div class="form-row">
@@ -34,7 +35,7 @@
                             <p class="mt-3"><strong>Quantity:</strong></p>
                             <div class="form-group w-100">
                                 <div class="input-group">
-                                    <!-- ALTERNATIVE TO PREPEND FOR BS5??????? -->
+                                    ALTERNATIVE TO PREPEND FOR BS5??????? 
                                     <div class="input-group-prepend">
                                         <button class="decrement-qty btn 
                                             btn-black rounded-0"
@@ -86,12 +87,12 @@
                             {% endif %}
                             <input type="submit" class="btn btn-info" value="Add to Cart">
                         </div>
-                        <!-- CHECK IF NEEDED -->
-                        <!-- hidden form element to redirect back to page came from (redirect_url) -->
+                         CHECK IF NEEDED -->
+                        <!-- hidden form element to redirect back to page came from (redirect_url) 
                         <input type="hidden" name="redirect_url" 
                             value="{{ request.path }}">
                     </div>
-                </form>
+                </form> -->
                 <!-- <div class="card-body">
                     <a href="{% url 'product_detail' product.id %}" 
                         class="card-link">See Info</a>
@@ -99,9 +100,13 @@
                 <!-- add at to cart button -->
                     {% if request.user.is_superuser %}
                         <small class="ml-3">
-                            <a href="{% url 'edit_product' product.id %}">Edit</a> |
-                            <a class="text-danger" 
-                                href="{% url 'delete_product' product.id %}">Delete</a>
+                            <!-- <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-info"
+                                role="button">See
+                                More Info</a> -->
+                            <a href="{% url 'edit_product' product.id %}" class="card-link btn btn-info"
+                                role="button">Edit</a> 
+                            <!-- <a class="text-danger" 
+                                href="{% url 'delete_product' product.id %}">Delete</a> -->
                         </small>
                 
                 <!-- Button trigger modal -->
@@ -127,7 +132,71 @@
                                 </div>
                                 </div>
                             </div>
-                        </div>      
+                        </div> 
+                    {% else %}
+                    <div class="card-body">
+                        <!-- <a href="#link" class="btn btn-info" role="button">Link Button</a> -->
+                        <a href="{% url 'product_detail' product.id %}" class="card-link btn btn-info" role="button">See
+                            More Info</a>
+                    </div>
+                    <form class="form container" action="{% url 'add_to_cart' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-12">
+                                <h3>Add to Cart</h3>
+                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <div class="form-group w-100">
+                                    <div class="input-group">
+                                        <!-- ALTERNATIVE TO PREPEND FOR BS5??????? -->
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn 
+                                            btn-black rounded-0" data-item_id="{{ product.id }}"
+                                                id="decrement-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        {% for item in cart_items %}
+                                        <input class="form-control qty_input" type="number" name="quantity"
+                                            value="{{ item.quantity }}" min="1" max="15" data-item_id="{{ product.id }}"
+                                            id="id_qty_{{ product.id }}">
+                                        {% empty %}
+                                        <input class="form-control qty_input" type="number" name="quantity" value=0
+                                            min="0" max="15" data-item_id="{{ product.id }}"
+                                            id="id_qty_{{ product.id }}">
+                                        {% endfor %}
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn 
+                                            btn-black rounded-0" data-item_id="{{ product.id }}"
+                                                id="increment-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-plus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="col-12">
+                                {% if cart %}
+                                <a href="{% url 'checkout' %}" class="btn">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="text-uppercase">Checkout</span>
+                                </a>
+                                {% endif %}
+                                <input type="submit" class="btn btn-info" value="Add to Cart">
+                            </div>
+                            <!-- CHECK IF NEEDED -->
+                            <!-- hidden form element to redirect back to page came from (redirect_url) -->
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </div>
+                    </form>
+
                     {% endif %}
             </div>
         </div>
