--- a/static/css/base.css
+++ b/static/css/base.css
@@ -21,3 +21,41 @@ body {
   background-size: cover;
   /* position: relative;  */
 }
+
+/* Adapted from https://getcssscan.com/css-buttons-examples */
+
+
+.primary-btn {
+  background-color: #fbeee0;
+  border: 2px solid #422800;
+  border-radius: 30px;
+  box-shadow: #422800 4px 4px 0 0;
+  color: #422800;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 0 18px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.primary-btn:hover {
+  background-color: #fff;
+}
+
+.primary-btn:active {
+  box-shadow: #422800 2px 2px 0 0;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  .primary-btn {
+    min-width: 120px;
+    padding: 0 25px;
+  }
+}
