--- a/templates/base.html
+++ b/templates/base.html
@@ -74,11 +74,6 @@
                     id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" 
-                                href="{% url 'home' %}">Home
-                            </a>
-                        </li>
-                        <li class="nav-item">
                             {% if user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'account_logout' %}">
@@ -86,10 +81,11 @@
                             </a>
                         </li>
                         <li class="nav-item text-center">
-                            <i class="fa-solid fa-user"></i>
-                            <a class="nav-link" href="{% url 'profile' %}"
-                                >My Profile
+                            <a class="nav-link" href="{% url 'profile' %}">
+                                <i class="fa-solid fa-user"></i>
+                                My Profile
                             </a>
+                            
                         </li>
                         {% else %}
                         <li class="nav-item">
@@ -110,8 +106,8 @@
                             </a>
                         </li>
                         <li class="nav-item text-center">
-                            <i class="fa-solid fa-clipboard-question"></i>
                             <a class="nav-link" href="{% url 'view_faq' %}">
+                                <i class="fa-solid fa-clipboard-question"></i>
                                 <abbr title="Frequently Asked Questions">FAQs</abbr>
                             </a>
                         </li>
@@ -138,7 +134,7 @@
                         {% endif %}
                         <li class="nav-item list-inline-item text-center">
                             <a class="nav-link" href="{% url 'view_cart' %}">
-                                <div><i class="fa-solid fa-basket-shopping"></i></div>
+                                <i class="fa-solid fa-basket-shopping"></i>
                                 Shopping Cart
                                 {% if total %}
                                     £{{ total|floatformat:2 }}
@@ -191,9 +187,6 @@
                 </div>
             </div>
     </nav>
-
-    
-
 
     {% if messages %}
     <div class="message-container">
