--- a/templates/base.html
+++ b/templates/base.html
@@ -80,12 +80,12 @@
                                 Logout
                             </a>
                         </li>
+                        <!-- CHANGE TO DROPDOWN -->
                         <li class="nav-item text-center">
                             <a class="nav-link" href="{% url 'profile' %}">
                                 <i class="fa-solid fa-user"></i>
                                 My Account
-                            </a>
-                            
+                            </a>  
                         </li>
                         {% else %}
                         <li class="nav-item">
