--- a/templates/base.html
+++ b/templates/base.html
@@ -78,8 +78,10 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarAccountDropdownMenuLink" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa-solid fa-user"></i>
                                     My Account
                                 </a>
+                                
                                 <ul class="dropdown-menu" aria-labelledby="navbarAccountDropdownMenuLink">
                                     <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
                                     <li><a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a></li>
@@ -89,15 +91,29 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'products' %}">
+                                <i class="fa-solid fa-book-open"></i>
                                 Menu
                             </a>
                         </li>
                         <li class="nav-item text-center">
                             <a class="nav-link" href="{% url 'view_faq' %}">
-                                <i class="fa-solid fa-clipboard-question"></i>
+                                <i class="fa-solid fa-circle-question"></i>
                                 <abbr title="Frequently Asked Questions">FAQs</abbr>
                             </a>
                         </li>
+                        <li class="nav-item list-inline-item text-center">
+                            <a class="nav-link" href="{% url 'view_cart' %}">
+                                <i class="fa-solid fa-basket-shopping"></i>
+                                Shopping Cart
+                                {% if total %}
+                                £{{ total|floatformat:2 }}
+                                {% else %}
+                                £0.00
+                                {% endif %}
+                            </a>
+                        </li>
+
+
 
 
                         {% if request.user.is_authenticated %}
@@ -106,6 +122,7 @@
                                 <a class="nav-link dropdown-toggle" href="#" 
                                     id="navbarDarkDropdownMenuLink" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa-solid fa-clipboard-list"></i>
                                         Product Management
                                 </a>
                             
@@ -124,7 +141,7 @@
                         {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'account_signup' %}">
-                                Register
+                                Signup
                             </a>
                         </li>
                         <li>
@@ -133,18 +150,6 @@
                             </a>
                         </li>
                         {% endif %}
-                        <li class="nav-item list-inline-item text-center">
-                            <a class="nav-link" href="{% url 'view_cart' %}">
-                                <i class="fa-solid fa-basket-shopping"></i>
-                                Shopping Cart
-                                {% if total %}
-                                    £{{ total|floatformat:2 }}
-                                {% else %}
-                                £0.00
-                                {% endif %}
-                            </a>
-                        </li>
-
                     </ul>
                     <form class="d-flex" method="GET" action="{% url 'products' %}">
                         <input class="form-control me-2 border border-4 rounded-pill border-dark"
